test: reintroduce scsi logs intern test
Due to the switch in the LDM module from direct SCSI requests
to TLC requests, the internal SCSI logs test was withdrawn
in the previous patch. This patch reintroduces this test with
a version that is compliant with the TLC.

Change-Id: I9df71f4f3885cd1a43b4011063b32307df106ac4
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12585
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/src/tlc/Makefile.am
+++ b/src/tlc/Makefile.am
@@ -2,6 +2,8 @@ AM_CFLAGS= $(CC_OPT)
 
 sbin_PROGRAMS=tlc
 
+noinst_LTLIBRARIES=libpho_tlc.la
+
 unitdir=`pkg-config systemd --variable=systemdsystemunitdir`
 unit_files=tlc.service
 unit_DATA=$(unit_files)
@@ -9,7 +11,7 @@ EXTRA_DIST=$(unit_files)
 
 tlc_SOURCES=tlc.c tlc_cfg.h tlc_cfg.c tlc_library.h tlc_library.c \
             ../ldm-modules/scsi_api.h
-tlc_CFLAGS=$(AM_CFLAGS)
+tlc_CFLAGS=$(AM_CFLAGS) -I../ldm-modules
 tlc_LDADD=../dss/libpho_dss.la \
           ../cfg/libpho_cfg.la \
           ../common/libpho_common.la \
@@ -18,3 +20,6 @@ tlc_LDADD=../dss/libpho_dss.la \
           ../serializer/libpho_serializer_tlc.la \
           ../ldm-modules/libpho_scsi.la
 tlc_LDFLAGS=-Wl,-rpath=$(libdir) -Wl,-rpath=$(pkglibdir)
+
+libpho_tlc_la_SOURCES=tlc_cfg.h tlc_cfg.c tlc_library.h tlc_library.c
+libpho_tlc_la_CFLAGS=$(AM_CFLAGS) -I../ldm-modules
