--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -12,6 +12,10 @@ IO_LIB=$(TO_SRC)/io/libpho_io.la $(MOD_LOAD_LIB)
 LDM_LIB=$(TO_SRC)/ldm/libpho_ldm.la $(MOD_LOAD_LIB)
 LRS_LIB=$(TO_SRC)/lrs/libpho_lrs.la
 SERIALIZER_LIB=$(TO_SRC)/serializer/libpho_serializer.la
+COMM_LIB=$(TO_SRC)/communication/libpho_comm.la
+SERIALIZER_TLC_LIB=$(TO_SRC)/serializer/libpho_serializer_tlc.la
+SCSI_LIB=$(TO_SRC)/ldm-modules/libpho_scsi.la
+TLC_LIB=$(TO_SRC)/tlc/libpho_tlc.la
 
 noinst_LTLIBRARIES=libpho_test_utils.la
 
@@ -19,5 +23,7 @@ libpho_test_utils_la_SOURCES=pho_test_utils.c pho_test_utils.h test_setup.c \
                              test_setup.h pho_test_xfer_utils.h
 libpho_test_utils_la_LIBADD=$(LRS_LIB) $(LDM_LIB) $(IO_LIB) $(DSS_LIB) \
                             $(SERIALIZER_LIB) $(CFG_LIB) $(COMMON_LIB) \
-                            $(DAEMON_LIB)
-libpho_test_utils_la_CFLAGS=${AM_CFLAGS} -I$(TO_SRC)/lrs -I$(TO_SRC)/ldm-modules
+                            $(DAEMON_LIB) $(COMM_LIB) $(SERIALIZER_TLC_LIB) \
+                            $(SCSI_LIB) $(TLC_LIB)
+libpho_test_utils_la_CFLAGS=${AM_CFLAGS} -I$(TO_SRC)/lrs \
+                            -I$(TO_SRC)/ldm-modules -I$(TO_SRC)/tlc
