admin: add phobos_admin_repack call
This call allow the repack of a medium ie. copying all its alive objects
to another empty medium.

Change-Id: I5dc81e96a9b920b967072ab68952bd96930a1ab6
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12683
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/src/admin/Makefile.am
+++ b/src/admin/Makefile.am
@@ -7,7 +7,7 @@ libphobos_admin_la_SOURCES=admin.c admin_utils.h import.c import.h
 libphobos_admin_la_LIBADD=../dss/libpho_dss.la ../cfg/libpho_cfg.la \
                           ../common/libpho_common.la \
                           ../communication/libpho_comm.la \
-                          ../ldm/libpho_ldm.la \
+                          ../io/libpho_io.la ../ldm/libpho_ldm.la \
                           ../serializer/libpho_serializer.la \
                           ../serializer/libpho_serializer_tlc.la \
                           ../layout-modules/libpho_layout_raid1.la \
