common: add reference counter pho_ref
This is a simple reference counter that is atomic. References
can be incremented or decremented without external synchronization
mechanism if done from different threads.

Change-Id: Ica0dc41e66db4d4b354d1ec31a03aff164529264
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12742
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -2,6 +2,12 @@ AM_CFLAGS= $(CC_OPT)
 
 noinst_LTLIBRARIES=libpho_common.la
 
-libpho_common_la_SOURCES=common.c attrs.c type_utils.c log.c saj.c slist.c \
-                         global_state.c
+libpho_common_la_SOURCES=attrs.c \
+                         common.c \
+                         global_state.c \
+                         log.c \
+                         pho_ref.c \
+                         saj.c \
+                         slist.c \
+                         type_utils.c
 libpho_common_la_LIBADD=-ljansson -lm
