common: add a generic cache mechanism pho_cache
This patch adds a new data type pho_cache that will cache values of
arbitrary types. Values are indexed by a key that is needed to get a
reference. Values in the cache can be managed using the following
functions:

- pho_cache_acquire: get a value from the cache given a key.
  If the value is not in the cache, it is built using
  pho_cache_operations::pco_build. Otherwise, the value in the cache is
  returned and its reference count is increased.
- pho_cache_release: release a value to the cache.
  The reference count of the value is decreased and if it reaches 0,
  the value is freed using pho_cache_operations::pco_destroy.
- pho_cache_insert: add a value that was built externally to the cache
  (i.e. without a call to pho_cache_operations::pco_build). This will
  be helpful to build the media cache in the LRS. The LRS will fetch
  media from the DSS to select the best one for a write allocation.
  Once the best one is selected we can simply insert it in the cache
  without an extra DSS request.
- pho_cache_update: explicitly build a new value and replace it in the
  cache to get the most up to date version and return it. This
  function ensures that the value we receive is up to date by creating
  a new value with pho_cache_operations::pco_build.

The cache allows the user to insert values built externally. This is
because the LRS can fetch values from the DSS and select the most
optimal one for an I/O. In this case, we don't want to make a second DSS
request simply to retrieve the medium info that was already fetched.

We also can update values that we already have a reference to because in
some parts of the LRS' code, we need to detect if a medium was locked
for instance.

Both of these constraints imply that some thread may have an outdated
reference to the cached value. But since they still hold a reference to
it, it needs to be kept in the cache in order to be released when the
reference count becomes 0. This pr

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -6,6 +6,7 @@ libpho_common_la_SOURCES=attrs.c \
                          common.c \
                          global_state.c \
                          log.c \
+                         pho_cache.c \
                          pho_ref.c \
                          saj.c \
                          slist.c \
