lrs: add media cache prototypes
This patch only adds the media cache function prototypes in the LRS.
A cache per family is added to struct phobos_global_context.

Change-Id: Ide505651fa8b62f8064fe7ab351eaa189b720b70
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12745
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/src/lrs/Makefile.am
+++ b/src/lrs/Makefile.am
@@ -16,6 +16,7 @@ IO_SCHEDULERS=io_schedulers/fifo.c \
               io_schedulers/scheduler_priority_algorithms.c
 
 phobosd_SOURCES=lrs.c \
+                lrs_cache.h lrs_cache.c \
                 lrs_cfg.h lrs_cfg.c \
                 lrs_device.h lrs_device.c \
                 lrs_sched.h lrs_sched.c \
@@ -37,5 +38,11 @@ phobosd_LDADD=../dss/libpho_dss.la \
 
 phobosd_LDFLAGS=-Wl,-rpath=$(libdir) -Wl,-rpath=$(pkglibdir)
 
-libpho_lrs_la_SOURCES=lrs_cfg.c lrs_sched.c lrs_device.c lrs_thread.c \
-                      io_sched.c lrs_utils.c $(IO_SCHEDULERS)
+libpho_lrs_la_SOURCES=io_sched.c \
+                      lrs_cache.c \
+                      lrs_cfg.c \
+                      lrs_device.c \
+                      lrs_sched.c \
+                      lrs_thread.c \
+                      lrs_utils.c \
+                      $(IO_SCHEDULERS)
