import: move import source file to admin directory
This patchs moves the media_import.c source file to the admin directory,
as it is an admin feature and doesn't need to be separated from it.

Change-Id: Ib133a8e8b816f6a02d59f3ad2acb097ad75710af
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12789
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/src/admin/Makefile.am
+++ b/src/admin/Makefile.am
@@ -3,12 +3,14 @@ AM_LDFLAGS=-Wl,-rpath=$(libdir) -Wl,-rpath=$(pkglibdir)
 
 lib_LTLIBRARIES=libphobos_admin.la
 
-libphobos_admin_la_SOURCES=admin.c admin_utils.h
+libphobos_admin_la_SOURCES=admin.c admin_utils.h import.c import.h
 libphobos_admin_la_LIBADD=../dss/libpho_dss.la ../cfg/libpho_cfg.la \
                           ../common/libpho_common.la \
                           ../communication/libpho_comm.la \
                           ../ldm/libpho_ldm.la \
-                          ../import/libpho_import.la \
                           ../serializer/libpho_serializer.la \
                           ../serializer/libpho_serializer_tlc.la \
-                          ../layout-modules/libpho_layout_raid1.la
+                          ../layout-modules/libpho_layout_raid1.la \
+                          ../io-modules/libpho_io_adapter_posix.la \
+                          ../io-modules/libpho_io_adapter_ltfs.la
+libphobos_admin_la_CFLAGS=$(AM_CFLAGS) -I../io-modules -I../layout-modules
