--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -15,6 +15,8 @@ lib_device    = /dev/changer
 server_socket = /run/phobosd/lrs
 # path of the daemon lock file
 lock_file     = /run/phobosd/phobosd.lock
+# Maximum health a device or medium can have
+max_health    = 5
 
 # Thresholds for synchronization mechanism
 # time threshold for medium synchronization, in ms,
