scsi: move scsi stuff from ldm-modules to tlc
As of now, there is no more scsi calls in any ldm module. The
TLC is the only component that achieves SCSI requests. This
patch moves the SCSI stuff to the tlc directory.

Change-Id: I970e4c4dcc73ccfc6883e9a9bb9bf5e4169a1913
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12844
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/configure.ac
+++ b/configure.ac
@@ -138,6 +138,7 @@ AC_CONFIG_FILES([Makefile
          src/admin/Makefile
          src/cli/Makefile
          src/tlc/Makefile
+         src/tlc/scsi/Makefile
          src/daemon/Makefile
          tests/Makefile
          tests/interns/Makefile
