--- a/src/tlc/Makefile.am
+++ b/src/tlc/Makefile.am
@@ -1,5 +1,7 @@
 AM_CFLAGS= $(CC_OPT)
 
+SUBDIRS=scsi
+
 sbin_PROGRAMS=tlc
 
 noinst_LTLIBRARIES=libpho_tlc.la
@@ -10,16 +12,16 @@ unit_DATA=$(unit_files)
 EXTRA_DIST=$(unit_files)
 
 tlc_SOURCES=tlc.c tlc_cfg.h tlc_cfg.c tlc_library.h tlc_library.c \
-            ../ldm-modules/scsi_api.h
-tlc_CFLAGS=$(AM_CFLAGS) -I../ldm-modules
+            scsi/scsi_api.h
+tlc_CFLAGS=$(AM_CFLAGS) -Iscsi
 tlc_LDADD=../dss/libpho_dss.la \
           ../cfg/libpho_cfg.la \
           ../common/libpho_common.la \
           ../communication/libpho_comm.la \
           ../daemon/libpho_daemon.la \
           ../serializer/libpho_serializer_tlc.la \
-          ../ldm-modules/libpho_scsi.la
+          scsi/libpho_scsi.la
 tlc_LDFLAGS=-Wl,-rpath=$(libdir) -Wl,-rpath=$(pkglibdir)
 
 libpho_tlc_la_SOURCES=tlc_cfg.h tlc_cfg.c tlc_library.h tlc_library.c
-libpho_tlc_la_CFLAGS=$(AM_CFLAGS) -I../ldm-modules
+libpho_tlc_la_CFLAGS=$(AM_CFLAGS) -Iscsi
