--- a/.pylintrc
+++ b/.pylintrc
@@ -37,7 +37,7 @@ load-plugins=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
-#disable=
+disable=no-else-return,locally-disabled,fixme,too-few-public-methods
 #disable=I, W, R, import-error, no-name-in-module
 
 [REPORTS]
@@ -68,7 +68,7 @@ comment=yes
 
 # Template used to display messages. This is a python new-style format string
 # used to format the message information. See doc for all details
-#msg-template=
+msg-template='{path}:{line}: [{msg_id}, {symbol}, {obj}] {msg}'
 
 
 [FORMAT]
@@ -117,7 +117,7 @@ additional-builtins=
 bad-functions=map,filter,apply,input,file
 
 # Good variable names which should always be accepted, separated by a comma
-good-names=i,j,k,v,rc,ex,Run,_
+good-names=i,j,k,v,rc,ex,Run,_,dss,cluster,fd
 
 # Bad variable names which should always be refused, separated by a comma
 bad-names=foo,bar,baz,toto,tutu,tata
