dss: add deprecated object resource file
This patch adds the deprecated object resource file and moves related
functions from dss.c, except the lazy find function.

Change-Id: I97392ed1cd3621fd9a5d8c2f786b57f5df62f5c8
Signed-off-by: VALERI Yoann <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12869
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/src/dss/Makefile.am
+++ b/src/dss/Makefile.am
@@ -6,6 +6,6 @@ libpho_dss_la_SOURCES=dss.c dss_action_update.c dss_lock.c dss_lock.h \
                       dss_logs.h dss_logs.c dss_utils.c dss_utils.h \
                       resources.c resources.h device.c device.h dss_config.h \
                       dss_config.c media.c media.h filters.c filters.h \
-                      extent.c extent.h
+                      extent.c extent.h deprecated.c deprecated.h
 libpho_dss_la_CFLAGS=${LIBPQ_CFLAGS} ${AM_CFLAGS}
 libpho_dss_la_LIBADD=${LIBPQ_LIBS}
