--- a/src/dss/Makefile.am
+++ b/src/dss/Makefile.am
@@ -3,7 +3,7 @@ AM_CFLAGS= $(CC_OPT)
 noinst_LTLIBRARIES=libpho_dss.la
 
 libpho_dss_la_SOURCES=dss.c dss_action_update.c dss_lock.c dss_lock.h \
-                      dss_logs.h dss_logs.c dss_utils.c dss_utils.h \
+                      logs.h logs.c dss_utils.c dss_utils.h \
                       resources.c resources.h device.c device.h dss_config.h \
                       dss_config.c media.c media.h filters.c filters.h \
                       extent.c extent.h deprecated.c deprecated.h \
