--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -67,7 +67,7 @@ check_SCRIPTS=acceptance.test \
               test_ping.test \
               test_put.sh \
               test_raid1_split.sh \
-              test_resource_availability.sh \
+              test_resource_availability.test \
               test_resource_management.sh \
               test_tlc.test \
               test_tlc_load_unload.test \
