--- a/src/include/Makefile.am
+++ b/src/include/Makefile.am
@@ -8,6 +8,7 @@ noinst_HEADERS=pho_cache.h \
                pho_common.h \
                pho_daemon.h \
                pho_dss.h \
+               pho_dss_wrapper.h \
                pho_io.h \
                pho_layout.h \
                pho_mapper.h \
@@ -26,7 +27,8 @@ noinst_HEADERS=pho_cache.h \
 #   - phobos_admin.h  admin command interface
 #   - pho_attrs.h     access and manipulate object metadata
 include_HEADERS=pho_attrs.h pho_cfg.h pho_comm.h pho_common.h pho_dss.h \
-                pho_ldm.h pho_types.h phobos_store.h phobos_admin.h
+                pho_dss_wrapper.h pho_ldm.h pho_types.h phobos_store.h \
+                phobos_admin.h
 
 $(proto_headers): $(protodir)/gen-proto.stamp
 
