packaging: add libcmocka-devel dependency
rpm fails to build without cmocka, make it a clear requirement

Change-Id: I885bf2f59728c67a315fe33480f585e002f301dd
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Signed-off-by: Dominique Martinet <asmadeus@codewreck.org>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13062
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -42,6 +42,7 @@ BuildRequires: libtool
 BuildRequires: make
 BuildRequires: openssl-devel >= 0.9.7
 BuildRequires: xxhash-devel
+BuildRequires: libcmocka-devel
 
 Requires: %{postgres_prefix}-server
 Requires: %{postgres_prefix}-contrib
