tests: update test_lrs.sh to .test
Also, refactor some tests to make the cleanup process simpler and
test_retry_on_error to split the test in two (fifo and grouped_read).

Change-Id: Ifa029a4e4778118c093c32c1aecc2c4bbb20ed17
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13028
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -58,7 +58,7 @@ check_SCRIPTS=acceptance.test \
               test_locate.test \
               test_lock_clean.sh \
               test_logs.test \
-              test_lrs.sh \
+              test_lrs.test \
               test_lrs_drive_status.sh \
               test_lrs_scheduling.test \
               test_media.sh \
