tlc: add listen_hostname/port in config
This allows specifying a different host/port for server and client so
load-balancing can be provided

Change-Id: I4c68ac8e68c28d605da32a41d07cceb1f65f4661
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Signed-off-by: Dominique Martinet <asmadeus@codewreck.org>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13080
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -194,6 +194,15 @@ drive_rw = LTO9_drive
 
 # Tape Library Controler
 [tlc]
+# Server address
 hostname = localhost
 port = 20123
+
+# If the server needs to bind to a different hostname/port (e.g. for
+# load-balancing), uncomment and use these. Default will use hostname
+# and port.
+#listen_hostname = 0.0.0.0
+#listen_port = 20123
+
+# path to library changer for the server
 lib_device = /dev/changer
