pkg: update to 2.0.0
Few major features introduced by this new version 2.0:
- Medium and devices errors are logged into the DSS and managed
  through a health counter.
- Library are managed through a TLC (Tape Library Controler) that
manages concurrent access to the Library.
- Extent migration between tapes is now ready and paves the road
for the future tape repack feature.
- We can now import a tape from an other Phobos system.
- Media info are shared through the media cache between all
phobosd components.

Change-Id: If983325e1d7fefb0f745a8f002e9a3039300ddb8
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13082
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -190,6 +190,16 @@ ldconfig
 %endif
 
 %changelog
+* Fri May 17 2024 - Patrice Lucas <patrice.lucas@cea.fr> - 2.0.0-1
+- WARNING: the db schema moves from 1.95 to 2.0 and a migration is needed
+- Device, medium: errors are now logged into the DSS and managed through a
+  health counter
+- TLC: Library is now accessed through the Tape Library Controler
+- Extent migration between tapes is now ready and paves the road for the future
+  tape repack feature.
+- Tape import: we can now import into a Phobos system a tape from an other
+  Phobos system (recovery or transfer).
+
 * Fri Nov 24 2023 - Patrice Lucas <patrice.lucas@cea.fr> - 1.95.1-1
 - ltfs: improve ltfs log with serial number
 - ltfs: return an error if labels are different at mount operation
