tlc: add [tlc] listen_interface setting
Add a config item to allow binding the tlc server to an interface

This can easily be tested by setting listen_interface to an existing
interface and trying to connect via either 127.0.0.1 or that interface's
IP: only using the IP of the interface will work.

Change-Id: Ib6f1c1516227a18206fdfac435bf024d7fe8c9df

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -203,6 +203,8 @@ port = 20123
 # and port.
 #listen_hostname = 0.0.0.0
 #listen_port = 20123
+# It's also possible to force listening to a given interface
+#listen_interface = admin0
 
 # path to library changer for the server
 lib_device = /dev/changer
