common: move generate_uuid code from io/layout
The code will be used in the next patch inside admin.

Change-Id: I04f56f871df2c535d16151fdc9ac68f970c48261
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13221
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -11,4 +11,4 @@ libpho_common_la_SOURCES=attrs.c \
                          saj.c \
                          slist.c \
                          type_utils.c
-libpho_common_la_LIBADD=-ljansson -lm
+libpho_common_la_LIBADD=-ljansson -lm -luuid
