layout: fix xxhash conditional include
xxhash.h should not be included if HAVE_XXHASH is not defined.
Also, add USE_XXHASH flag available in Makefile.am to conditionally link
with the xxhash library.

Change-Id: Ie2a24963b7ea890fb7b22373ec63e60c58386e8b
Signed-off-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13237
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd.ocre@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/configure.ac
+++ b/configure.ac
@@ -94,6 +94,9 @@ AC_CHECK_LIB([xxhash], [XXH3_128bits_reset],
                         [XXH128 is available since xxhash 0.8.0])],
              [AC_SUBST(HAVE_XXH128, 'no')])
 
+AM_CONDITIONAL([USE_XXHASH],
+               [test "x$ac_cv_lib_xxhash_XXH3_128bits_reset" = "xyes"])
+
 # Checks for header files.
 AC_HEADER_STDC
 AC_CHECK_HEADERS([string.h sys/param.h limits.h])
